refactor: Misc tidyup of SMS API (#513)
* Misc tidyup of SMS implementation

* Add MessageEvent to main SMS package